// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders community 1`] = `
<div
  className="MainLayout-root Community-root"
  data-testid="community-container"
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-doubleItemGutter Flex-justifySpaceBetween Flex-alignFlexEnd gutter"
    >
      <div
        className="Box-root Flex-root Flex-flex"
      >
        <fieldset
          className="FieldSet-root"
        >
          <legend
            className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary UserTableFilter-legend"
          >
            Search
          </legend>
          <form
            autoComplete="off"
            id="configure-form"
            onSubmit={[Function]}
          >
            <div
              className="TextField-root UserTableFilter-textField"
            >
              <input
                aria-label="Search by username or email address"
                className="TextField-input TextField-colorRegular TextField-seamlessAdornment"
                name="search"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Search by username or email address..."
                type="text"
                value=""
              />
              <div
                className="TextField-adornment"
              >
                <button
                  aria-label="Search"
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorDark Button-variantAdornment UserTableFilter-adornment"
                  data-color="dark"
                  data-variant="adornment"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="submit"
                >
                  <i
                    aria-hidden="true"
                    className="Icon-root Icon-md"
                  >
                    search
                  </i>
                </button>
              </div>
            </div>
          </form>
        </fieldset>
        <fieldset
          className="FieldSet-root"
        >
          <legend
            className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary UserTableFilter-legend"
          >
            Show Me
          </legend>
          <div
            className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
          >
            <span
              className="SelectField-root UserTableFilter-selectField"
            >
              <select
                aria-label="Search by role"
                className="SelectField-select"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                value=""
              >
                <option
                  value=""
                >
                  All Roles
                </option>
                <optgroup
                  label="Audience"
                >
                  <option
                    value="COMMENTER"
                  >
                    Commenters
                  </option>
                </optgroup>
                <optgroup
                  label="Organization"
                >
                  <option
                    value="ADMIN"
                  >
                    Admins
                  </option>
                  <option
                    value="MODERATOR"
                  >
                    Moderators
                  </option>
                  <option
                    value="STAFF"
                  >
                    Staff
                  </option>
                </optgroup>
              </select>
              <span
                aria-hidden={true}
                className="SelectField-afterWrapper"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  expand_more
                </i>
              </span>
            </span>
            <span
              className="SelectField-root UserTableFilter-selectField"
            >
              <select
                aria-label="Search by user status"
                className="SelectField-select"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                value=""
              >
                <option
                  value=""
                >
                  All Statuses
                </option>
                <option
                  value="ACTIVE"
                >
                  Active
                </option>
                <option
                  value="SUSPENDED"
                >
                  Suspended
                </option>
                <option
                  value="BANNED"
                >
                  Banned
                </option>
              </select>
              <span
                aria-hidden={true}
                className="SelectField-afterWrapper"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  expand_more
                </i>
              </span>
            </span>
          </div>
        </fieldset>
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root HorizontalGutter-double"
    >
      <table
        className="Table-root Table-fullWidth"
      >
        <thead
          className="TableHead-root"
        >
          <tr
            className="TableRow-root"
          >
            <th
              className="TableCell-root UserTable-usernameColumn TableCell-header"
            >
              Username
            </th>
            <th
              className="TableCell-root UserTable-emailColumn TableCell-header"
            >
              Email
            </th>
            <th
              className="TableCell-root UserTable-memberSinceColumn TableCell-header"
            >
              Member Since
            </th>
            <th
              className="TableCell-root UserTable-roleColumn TableCell-header"
            >
              Role
            </th>
            <th
              className="TableCell-root UserTable-statusColumn TableCell-header"
            >
              Status
            </th>
          </tr>
        </thead>
        <tbody
          className="TableBody-root"
        />
      </table>
      <div
        className="Box-root Flex-root Flex-flex Flex-justifyCenter"
      >
        <svg
          className="Spinner-spinner"
          height="40px"
          viewBox="0 0 66 66"
          width="40px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            className="Spinner-path"
            cx="33"
            cy="33"
            fill="none"
            r="30"
            strokeLinecap="round"
            strokeWidth="6"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders empty community 1`] = `
<div
  className="MainLayout-root Community-root"
  data-testid="community-container"
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-doubleItemGutter Flex-justifySpaceBetween Flex-alignFlexEnd gutter"
    >
      <div
        className="Box-root Flex-root Flex-flex"
      >
        <fieldset
          className="FieldSet-root"
        >
          <legend
            className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary UserTableFilter-legend"
          >
            Search
          </legend>
          <form
            autoComplete="off"
            id="configure-form"
            onSubmit={[Function]}
          >
            <div
              className="TextField-root UserTableFilter-textField"
            >
              <input
                aria-label="Search by username or email address"
                className="TextField-input TextField-colorRegular TextField-seamlessAdornment"
                name="search"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Search by username or email address..."
                type="text"
                value=""
              />
              <div
                className="TextField-adornment"
              >
                <button
                  aria-label="Search"
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorDark Button-variantAdornment UserTableFilter-adornment"
                  data-color="dark"
                  data-variant="adornment"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="submit"
                >
                  <i
                    aria-hidden="true"
                    className="Icon-root Icon-md"
                  >
                    search
                  </i>
                </button>
              </div>
            </div>
          </form>
        </fieldset>
        <fieldset
          className="FieldSet-root"
        >
          <legend
            className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary UserTableFilter-legend"
          >
            Show Me
          </legend>
          <div
            className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
          >
            <span
              className="SelectField-root UserTableFilter-selectField"
            >
              <select
                aria-label="Search by role"
                className="SelectField-select"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                value=""
              >
                <option
                  value=""
                >
                  All Roles
                </option>
                <optgroup
                  label="Audience"
                >
                  <option
                    value="COMMENTER"
                  >
                    Commenters
                  </option>
                </optgroup>
                <optgroup
                  label="Organization"
                >
                  <option
                    value="ADMIN"
                  >
                    Admins
                  </option>
                  <option
                    value="MODERATOR"
                  >
                    Moderators
                  </option>
                  <option
                    value="STAFF"
                  >
                    Staff
                  </option>
                </optgroup>
              </select>
              <span
                aria-hidden={true}
                className="SelectField-afterWrapper"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  expand_more
                </i>
              </span>
            </span>
            <span
              className="SelectField-root UserTableFilter-selectField"
            >
              <select
                aria-label="Search by user status"
                className="SelectField-select"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                value=""
              >
                <option
                  value=""
                >
                  All Statuses
                </option>
                <option
                  value="ACTIVE"
                >
                  Active
                </option>
                <option
                  value="SUSPENDED"
                >
                  Suspended
                </option>
                <option
                  value="BANNED"
                >
                  Banned
                </option>
              </select>
              <span
                aria-hidden={true}
                className="SelectField-afterWrapper"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  expand_more
                </i>
              </span>
            </span>
          </div>
        </fieldset>
      </div>
      <div
        data-testid="invite-users"
      >
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantFilled"
          data-color="primary"
          data-testid="invite-users-button"
          data-variant="filled"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Invite
        </button>
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root HorizontalGutter-double"
    >
      <table
        className="Table-root Table-fullWidth"
      >
        <thead
          className="TableHead-root"
        >
          <tr
            className="TableRow-root"
          >
            <th
              className="TableCell-root UserTable-usernameColumn TableCell-header"
            >
              Username
            </th>
            <th
              className="TableCell-root UserTable-emailColumn TableCell-header"
            >
              Email
            </th>
            <th
              className="TableCell-root UserTable-memberSinceColumn TableCell-header"
            >
              Member Since
            </th>
            <th
              className="TableCell-root UserTable-roleColumn TableCell-header"
            >
              Role
            </th>
            <th
              className="TableCell-root UserTable-statusColumn TableCell-header"
            >
              Status
            </th>
          </tr>
        </thead>
        <tbody
          className="TableBody-root"
        />
      </table>
      <p
        className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary Typography-alignCenter EmptyMessage-root"
      >
        We could not find anyone in your community matching your criteria.
      </p>
    </div>
  </div>
</div>
`;
